tests/rosetta/out/C/averages-simple-moving-average.error
cc: exit status 1
/tmp/averages-simple-moving-average.c: In function ‘mochi_main’:
/tmp/averages-simple-moving-average.c:143:14: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  143 |   int sma3 = smaSeries(xs, 3);
      |              ^~~~~~~~~
/tmp/averages-simple-moving-average.c:144:14: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  144 |   int sma5 = smaSeries(xs, 5);
      |              ^~~~~~~~~
/tmp/averages-simple-moving-average.c:149:51: error: request for member ‘data’ in something not a structure or union
  149 |     char *tmp8 = concat_string(tmp7, pad(fmt3(sma3.data[i]), 5));
      |                                                   ^
/tmp/averages-simple-moving-average.c:151:52: error: request for member ‘data’ in something not a structure or union
  151 |     char *tmp10 = concat_string(tmp9, pad(fmt3(sma5.data[i]), 5));
      |                                                    ^
/tmp/averages-simple-moving-average.c:152:16: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  152 |     int line = tmp10;
      |                ^~~~~
