tests/rosetta/out/C/averages-simple-moving-average.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:04Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:04Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    if ((strcmp(slice_string(s, i, i + 1), ch) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

char *fmt3(double x) {
  double y = (double)((int)(((x * 1000.0) + 0.5))) / 1000.0;
  char *tmp1 = _str(y);
  char *s = tmp1;
  int dot = index_of_string(s, ".");
  if (dot == 0 - 1) {
    char *tmp2 = concat_string(s, ".000");
    s = tmp2;
  } else {
    int decs = strlen(s) - dot - 1;
    if (decs > 3) {
      s = slice_string(s, 0, dot + 4);
    } else {
      while (decs < 3) {
        char *tmp3 = concat_string(s, "0");
        s = tmp3;
        decs = decs + 1;
      }
    }
  }
  return s;
}

char *pad(char *s, int width) {
  char *out = s;
  while (strlen(out) < width) {
    char *tmp4 = concat_string(" ", out);
    out = tmp4;
  }
  return out;
}

list_float smaSeries(list_float xs, int period) {
  list_float res = list_float_create(0);
  double sum = 0.0;
  int i = 0;
  while (i < xs.len) {
    sum = sum + xs.data[i];
    if (i >= period) {
      sum = sum - xs.data[i - period];
    }
    int denom = i + 1;
    if ((denom > period)) {
      denom = period;
    }
    list_float tmp5 = list_float_create(1);
    tmp5.data[0] = sum / ((double)(denom));
    list_float tmp6 = concat_list_float(res, tmp5);
    res = tmp6;
    i = i + 1;
  }
  return res;
}

int mochi_main() {
  list_float xs = list_float_create(10);
  xs.data[0] = 1.0;
  xs.data[1] = 2.0;
  xs.data[2] = 3.0;
  xs.data[3] = 4.0;
  xs.data[4] = 5.0;
  xs.data[5] = 5.0;
  xs.data[6] = 4.0;
  xs.data[7] = 3.0;
  xs.data[8] = 2.0;
  xs.data[9] = 1.0;
  int sma3 = smaSeries(xs, 3);
  int sma5 = smaSeries(xs, 5);
  printf("x       sma3   sma5\n");
  int i = 0;
  while ((i < 10)) {
    char *tmp7 = concat_string(pad(fmt3(xs.data[i]), 5), "  ");
    char *tmp8 = concat_string(tmp7, pad(fmt3(sma3.data[i]), 5));
    char *tmp9 = concat_string(tmp8, "  ");
    char *tmp10 = concat_string(tmp9, pad(fmt3(sma5.data[i]), 5));
    int line = tmp10;
    printf("%d\n", line);
    i = i + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
